<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mbs.demo.getredbag.activity.MainActivity">


    <TextView
        android:id="@+id/accessibility_setting"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:text="@string/function_1"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:contentDescription="@string/image_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/wake_lock_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:text="@string/function_2"
            android:textSize="20sp"

            />

        <Switch
            android:id="@+id/wake_lock_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/wake_lock_text"
            android:layout_alignTop="@id/wake_lock_text"
            android:checked="false" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:contentDescription="@string/image_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/service_send_broadcast_id"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:text="@string/service_send_broadcast"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/service_receive_state_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:checked="false"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/send_power_down_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/send_power_down_text" />


</LinearLayout>
